fix ios animation flickering, change breakpoint for logo

--- a/portfolio/src/assets/styles/theme1.css
+++ b/portfolio/src/assets/styles/theme1.css
@@ -103,7 +103,6 @@ nav a {
     margin: 5px 9px;
     font-weight: 700;
     letter-spacing: 1px;
-    font-size: 0.8rem;
     text-transform: uppercase;
     color: black;
     text-decoration: none;
@@ -116,14 +115,20 @@ nav a:hover {
     color: black;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 730px) {
     .letter:not(:first-of-type) {
         margin-left: 2.5em;
     }
-}
-
-@media (min-width: 451px) {
+    .logo-contain {
+        width: 100%;
+    }
+    nav {
+        display: block;
+        text-align: center;
+    }
     nav a {
+        display: block;
+        margin: 10px;
         font-size: 1rem;
     }
 }
